install-yamls/rbac-serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spinnaker
