install-yamls/spinnaker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker-ingress
  annotations:
    kubernetes.io/ingress.class: "misc-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  namespace: spinnaker
spec:
  rules:
    - host: spinnaker.spinnaker.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spin-deck
                port:
                  number: 9000
    - host: spinnaker-api.spinnaker.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spin-gate
                port:
                  number: 8084
